<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".main.VideoPreferences" >

    <RelativeLayout
        android:id="@+id/layoutTopbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_high"
        android:layout_alignParentTop="true"
        android:background="#0F202E" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_high"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/logo" 
            android:contentDescription="@string/description"/>

        <LinearLayout
            android:layout_width="@dimen/one_pixel"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/topbar_search"
            android:orientation="horizontal"
            android:background="#15232b" />

        <ImageView
            android:id="@+id/topbar_search"
            android:layout_width="@dimen/header_high"
            android:layout_height="@dimen/header_high"
            android:layout_toLeftOf="@+id/separator1"
            android:background="#0F202E"
            android:scaleType="fitXY"
            android:src="@drawable/search_icon"
            android:visibility="gone" 
            android:contentDescription="@string/description"/>

        <RelativeLayout
            android:id="@+id/layout_search_box"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/separator1"
            android:background="#0f202e"
            android:gravity="right"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/topbar_search_show"
                android:layout_width="@dimen/header_high"
            	android:layout_height="@dimen/header_high"
                android:layout_alignParentLeft="true"
                android:background="#0f202e"
                android:scaleType="fitXY"
                android:src="@drawable/search_icon"
                android:visibility="visible" 
                android:contentDescription="@string/description"/>

            <EditText
                android:id="@+id/topbar_search_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/topbar_close"
                android:layout_toRightOf="@+id/topbar_search_show"
                android:background="#0f202e"
                android:hint="@string/search_text_default_text"
                android:singleLine="true"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/topbar_close"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="#0f202e"
                android:scaleType="fitCenter"
                android:src="@drawable/close_icon"
                android:visibility="visible" 
                android:contentDescription="@string/description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="7dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/topbar_search_show"
                android:background="#888888" />
        </RelativeLayout>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/videoFrameRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTopbar"
        android:text="@string/video_frame_rate_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />
    
    <TextView
        android:id="@+id/videoFrameRateUnitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/videoFrameRateTextView"
        android:layout_alignBottom="@id/videoFrameRateTextView"
        android:layout_below="@id/layoutTopbar"
        android:gravity="center"
        android:text="@string/fps"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/videoFrameRateEditText"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_toLeftOf="@id/videoFrameRateUnitLabel"
        android:layout_below="@id/layoutTopbar"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        />

    <SeekBar
        android:id="@+id/videoFrameRateSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoFrameRateTextView"
        android:layout_marginTop="5dp" />
    
    
    <TextView
        android:id="@+id/videoScaleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoFrameRateSeekBar"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="Select Scale Type:"
        android:textStyle="bold"
        />
    
    <CheckBox
        android:id="@+id/scaleToFillCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoScaleType"
        android:layout_marginTop="5dp"
        android:text="Scale To Fill"
        />
    
    <CheckBox
        android:id="@+id/scaleToFitCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoScaleType"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:text="Scale To Fit"
        />
    
    <Button
        android:id="@+id/cancelButton" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Cancel"
        />
    
    <Button
        android:id="@+id/applyButton" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Apply"
        />

</RelativeLayout>